# event-protocol-server

./: .env  .gitignore  .swcrc  README.md  ecosystem.config.cjs  eslint.config.js  j.json  nodemon.json  package.json  pnpm-lock.yaml  tsconfig.json
.cargo/: config.toml
.github/workflows/: pipeline.yml
crates/database/: Cargo.toml
crates/database/src/: lib.rs  native_enums.rs
crates/database/src/entities/: mod.rs  prediction_event.rs  setting.rs  signature_snapshot.rs  stream_snapshot.rs  ticket.rs  user.rs
crates/database/src/models/: mod.rs
crates/database/src/repositories/: mod.rs  prediction_event.rs  setting.rs  signature_snapshot.rs  stream_snapshot.rs  ticket.rs  user.rs
crates/http-server/: Cargo.toml
crates/http-server/src/: error.rs  main.rs  openapi.rs  serialization.rs
crates/http-server/src/extractors/: security.rs  state.rs  validation.rs
crates/http-server/src/handlers/: get_event.rs  get_events.rs  get_user_statistics.rs  mod.rs  sign_in.rs
crates/program/: Cargo.toml
crates/program/src/: accounts.rs  error.rs  events.rs  lib.rs  log.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: error.rs  handlers.rs  lib.rs  main.rs
crates/stream/: Cargo.toml
crates/stream/src/: error.rs  lib.rs  listeners.rs  main.rs
prisma/: schema.prisma
prisma/migrations/20240731104101_init/: migration.sql
src/: server.ts
src/endpoints/auth/: check-payload.handler.ts  gen-payload.handler.ts  sign-in.handler.ts  sign-up.handler.ts  sign.handler.ts
src/endpoints/event-answers/: vote.handler.ts
src/endpoints/events/: create.handler.ts  delete.handler.ts  get-detail.handler.ts  get-list.handler.ts
src/endpoints/prediction-event-answers/: create.handler.ts  prediction-event-answers.handler.ts  vote.handler.ts
src/endpoints/prediction-events/: create.handler.ts  delete.handler.ts  get-detail.handler.ts  get-list.handler.ts  prediction-events.handler.ts
src/endpoints/profile/: update.handler.ts
src/entrypoints/: server.ts
src/helpers/: decrypt-env.ts
src/infrastrutures/: database.ts  redis.ts
src/plugins/: auth.plugin.ts
src/repositories/: event.repository.ts  otp.repository.ts  prediction-event-answer.repository.ts  prediction-event.repository.ts  user.repository.ts  vote-transaction.repository.ts
src/shared/: constant.ts  env.ts  parser.ts
