[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "*", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
serde = { version = "1.0.209", features = ["derive"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }

program = { path = "../program" }
