[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5" }
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-derive-error = "0.1.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
jsonwebtoken = "9.3.0"
validator = { version = "0.18.1", features = ["derive"] }
thiserror = "1.0.63"
tower-http = { version = "0.5.2", features = ["cors"] }
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "*", features = ["axum"] }
chrono = "0.4.38"
hex = "0.4.3"
nacl = "0.5.3"
solana-sdk = { version = "2.0.7", default-features = false, features = [
    "generic-array",
] }

database = { path = "../database" }
