[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }
thiserror = "1.0.63"

solana-client = "2.0.7"
solana-sdk = { version = "2.0.7", default-features = false, features = [
    "generic-array",
] }
solana-transaction-status = "2.0.7"
dotenv = "0.15.0"

program = { path = "../program" }
database = { path = "../database" }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
